--- a/spirit/views/css/icons.css
+++ b/spirit/views/css/icons.css
@@ -1,3 +1,11 @@
+nav ul li a::before, #toolbox ul li a::before,
+button::before, .button::before,
+.photostream li a.permalink::before
+{ font-family: Ionicons; margin-right: .5em; }
+
+#toolbox ul li a::after
+{ font-family: Ionicons; margin-left: .5em; }
+
 nav ul li:nth-child(1) a::before { content: "\f147"; }
 nav ul li:nth-child(2) a::before { content: "\f148"; }
 nav ul li:nth-child(3) a::before { content: "\f212"; }
@@ -10,3 +18,8 @@ nav ul li:last-child a::before { content: "\f213"; }
 #toolbox ul li.delete a::before { content: "\f252"; }
 #toolbox ul li.clearFilter a::before { content: "\f36e"; }
 #toolbox ul li.filter a::after { content: "\f35f"; }
+
+.photostream li a.permalink::before { content: '\f1fe'; }
+
+button[type="submit"]::before { content: "\f122"; }
+button[type="reset"]::before { content: "\f12a"; }
