--- a/spirit/views/photo-edit.html
+++ b/spirit/views/photo-edit.html
@@ -31,7 +31,10 @@
             </li>
         </ul>
 
-        <p><button type="submit">Update</button> <button type="reset">Reset</button></p>
+        <p>
+            <button type="submit">Update</button>
+            <a href="{{baseUrl}}spirit/photos/delete/{{id}}" class="button delete">Delete Photo</a>
+        </p>
     </form>
 </main>
 
