--- a/spirit/views/css/icons.css
+++ b/spirit/views/css/icons.css
@@ -15,7 +15,7 @@ nav ul li:last-child a::before { content: "\f213"; }
 #toolbox ul li.back a::before { content: "\f2ca"; }
 #toolbox ul li.upload a::before { content: "\f366"; }
 #toolbox ul li.edit a::before { content: "\f2bf"; }
-#toolbox ul li.delete a::before { content: "\f252"; }
+#toolbox ul li.delete a::before, .button.delete::before { content: "\f252"; }
 #toolbox ul li.clearFilter a::before { content: "\f36e"; }
 #toolbox ul li.filter a::after { content: "\f35f"; }
 
