--- a/spirit/views/css/large.css
+++ b/spirit/views/css/large.css
@@ -17,10 +17,12 @@ main { margin-top: 6.5em; }
 main p.photo {
         float: left;
         margin-right: 2%;
+        margin-top: 0;
         width: 48%;
         text-align: right;
     }
     main p.photo + .form {
         float: left;
         width: 50%;
+        margin-top: 0;
 }
