--- a/spirit/views/admin.html
+++ b/spirit/views/admin.html
@@ -6,7 +6,7 @@
 <title>Spirit Admin &ndash; {{title}}</title>
 <meta name="author" content="Yichuan Shen" />
 <meta name="viewport" content="width=device-width, user-scalable=no">
-
+<link rel="icon" href="{{baseUrl}}spirit/favicon.ico">
 <link rel="stylesheet" type="text/css" href="{{baseUrl}}spirit/views/css/bootstrap.css" />
 <script src="//ajax.googleapis.com/ajax/libs/mootools/1.5.1/mootools-yui-compressed.js"></script>
 
