--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -34,7 +34,7 @@
     </li>{{/photos}}</ol>
 {{/hasPhotos}}
 {{^hasPhotos}}
-    Nothing found. Why not <em>upload</em> some photos?
+    <p>Nothing found. Why not <em>upload</em> some photos?</p>
 {{/hasPhotos}}
 </main>
 
