--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -19,19 +19,25 @@
     <h2>Albums</h2>
 
 {{#hasAlbums}}
-    <ol class="albumstream">{{#albums}}<li>
-        <img src="{{thumbnailLink}}" alt="{{name}}" />
-        <h3>{{name}}</h3>
-        <ul>
-            <li><a href="#">{{{formattedDate}}}</a></li>
-            <li><a href="#">Browse photos</a></li>
-            <li><a href="#">Edit</a></li>
-            <li><a href="#">Delete</a></li>
-        </ul>
-        <p>{{description}}</p>
-    </li>{{/albums}}</ol>
+    <ol class="albumstream">
+    {{#albums}}
+        <li>
+            <h3>{{name}} <em>({{count}})</em></h3>
+            <img src="{{largeImageLink}}" alt="{{name}}" />
+            <ul>
+                <li><a href="{{baseUrl}}spirit/albums/{{month}}" title="Filter by month">{{{formattedDate}}}</a></li>
+                <li><a href="{{baseUrl}}spirit/photos/album/{{id}}" title="Show photos">Browse</a></li>
+                <li><a href="{{baseUrl}}spirit/albums/edit/{{id}}">Edit</a></li>
+                <li><a href="{{baseUrl}}spirit/albums/delete/{{id}}">Delete</a></li>
+            </ul>
+            <p>{{description}}</p>
+        </li>
+    {{/albums}}
+    </ol>
 {{/hasAlbums}}
 {{^hasAlbums}}
-    Nothing found. Why not <em>add</em> some albums?
+    <p>Nothing found. Why not <em>add</em> some albums?</p>
 {{/hasAlbums}}
 </main>
+
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/albums.js"></script>
