--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -3,10 +3,10 @@
         {{#hasFilters}}
         <li class="clearFilter">
             {{#filterSearch}}
-            <a href="{{baseUrl}}spirit/photos" title="Clear filter">Filter: {{search}}</a>
+            <a href="{{baseUrl}}spirit/albums" title="Clear filter">Filter: {{search}}</a>
             {{/filterSearch}}
             {{#filterMonth}}
-            <a href="{{baseUrl}}spirit/photos" title="Clear filter">Filter: {{month}} {{year}}</a>
+            <a href="{{baseUrl}}spirit/albums" title="Clear filter">Filter: {{month}} {{year}}</a>
             {{/filterMonth}}
         </li>
         {{/hasFilters}}
