--- a/spirit/views/css/icons.css
+++ b/spirit/views/css/icons.css
@@ -1,9 +1,9 @@
-nav ul li a::before, #toolbox ul li a::before,
+nav ul li a::before, #toolbox li a::before,
 button::before, .button::before,
 .photostream li a.permalink::before, .albums li a::before
 { font-family: Ionicons; margin-right: .5em; }
 
-#toolbox ul li a::after
+#toolbox li a::after
 { font-family: Ionicons; margin-left: .5em; }
 
 nav ul li:nth-child(1) a::before { content: "\f147"; }
@@ -12,17 +12,23 @@ nav ul li:nth-child(3) a::before { content: "\f212"; }
 nav ul li:nth-child(4) a::before { content: "\f2ad"; }
 nav ul li:last-child a::before { content: "\f213"; }
 
-#toolbox ul li.back a::before { content: "\f2ca"; }
-#toolbox ul li.add a::before { content: "\f218"; }
-#toolbox ul li.upload a::before { content: "\f366"; }
-#toolbox ul li.edit a::before { content: "\f2bf"; }
-#toolbox ul li.delete a::before, .button.delete::before { content: "\f252"; }
-#toolbox ul li.clearFilter a::before { content: "\f36e"; }
-#toolbox ul li.filter a::after { content: "\f35f"; }
-
-.photostream li a.permalink::before { content: '\f1fe'; }
-
-button[type="submit"]::before { content: "\f122"; }
-button[type="reset"]::before, .albums li a::before { content: "\f12a"; }
-
-.albums li:last-child a::before { content: "\f218"; }
+#toolbox li.back a::before 
+{ content: "\f2ca"; }
+#toolbox li.add a::before, .albums li:last-child a::before 
+{ content: "\f218"; }
+#toolbox li.upload a::before 
+{ content: "\f366"; }
+#toolbox li.edit a::before 
+{ content: "\f2bf"; }
+#toolbox li.delete a::before, .button.delete::before 
+{ content: "\f252"; }
+#toolbox li.clearFilter a::before 
+{ content: "\f36e"; }
+#toolbox li.filter a::after 
+{ content: "\f35f"; }
+.photostream li a.permalink::before 
+{ content: '\f1fe'; }
+button[type="submit"]::before 
+{ content: "\f122"; }
+button[type="reset"]::before, .albums li a::before 
+{ content: "\f12a"; }
