--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -60,3 +60,4 @@
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/albums.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/loadmore.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/confirmdelete.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
