--- a/spirit/views/css/large.css
+++ b/spirit/views/css/large.css
@@ -3,7 +3,7 @@ header, #toolbox {
     top: 0;
     left: 0;
     right: 0;
-    z-index: 999;
+    z-index: 1;
 }
 header h1 { float: left; }
 
@@ -13,6 +13,7 @@ nav ul li a, #toolbox ul li a { margin-top: 0; margin-bottom: 0; }
 
 #toolbox { top: 3.6em; }
 main { margin-top: 6.5em; }
+#dialog main { margin-top: 0; }
 
 main p.photo {
         float: left;
