Add large dialog style

--- a/spirit/views/css/large.css
+++ b/spirit/views/css/large.css
@@ -38,3 +38,17 @@ main p.photo {
     margin-right: 1em;
     width: 285px;
 }
+
+#dialog {
+        top: -100%;
+        bottom: auto;
+        left: 50%;
+        width: 30em;
+        margin-left: -15em;
+        transition: .5s top;
+        box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
+    }
+    #dialog.show {
+        top: 0;
+        bottom: auto;
+}
