--- a/spirit/views/albums.html
+++ b/spirit/views/albums.html
@@ -30,7 +30,7 @@
                 <li class="edit"><a href="{{baseUrl}}spirit/albums/edit/{{id}}">Edit</a></li>
                 <li class="delete"><a href="{{baseUrl}}spirit/albums/delete/{{id}}">Delete</a></li>
             </ul>
-            <p>{{description}}</p>
+            <p>{{^hasDescription}}&nbsp;{{/hasDescription}}{{description}}</p>
         </li>
         {{/albums}}
     </ol>
