--- a/spirit/views/css/bootstrap.css
+++ b/spirit/views/css/bootstrap.css
@@ -1,5 +1,3 @@
-@charset "UTF-8";
-
 @import url('layout.css');
 @import url('icons.css');
 @import url('colors.css');
@@ -7,9 +5,12 @@
 @import url('form.css');
 @import url('components.css');
 @import url('large.css') only screen and (min-width: 700px);
+@import url('small.css') only screen and (max-width: 700px);
 
 /* Source Sans Pro font */
 @import url('http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,300,400italic,700');
+
+@charset "UTF-8";
 
 /*!
     Ionicons, v2.0.0
