--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -29,7 +29,7 @@
         <label>Select photo: <input type="checkbox" name="photoId[]" value="{{id}}" /></label>
         <a class="permalink" href="{{permalink}}" title="Permalink to &lsquo;{{title}}&rsquo;">Permalink</a>
         <a href="{{baseUrl}}spirit/photos/edit/{{id}}" title="Edit &lsquo;{{title}}&rsquo;">
-            <img src="{{thumbnailLink}}" alt="{{title}}" />
+            <img width="{{thumbWidth}}" height="{{thumbHeight}}" src="{{thumbnailLink}}" alt="{{title}}" />
         </a>
     </li>{{/photos}}</ol>
     {{/hasPhotos}}
