--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -144,9 +144,9 @@
         left: 0;
         top: -100%;
         width: 100%;
-        max-height: 100%;
+        max-height: 66%;
         overflow: auto;
-        background: white;
+        background: rgba(255, 255, 255, .95);
         z-index: 100;
         transition: top .5s;
         box-shadow: 0 10px 20px rgba(0, 0, 0, .1);
@@ -170,3 +170,22 @@
         display: block;
         opacity: .2;
 }
+
+#albumpicker ol {
+        list-style: none;
+        margin-left: 0;
+    }
+    #albumpicker ol li a {
+        display: block;
+        padding: .5em;
+        color: black;
+        text-decoration: none;
+    }
+    #albumpicker ol li + li a { border-top: 1px solid #DEE6ED; }
+    #albumpicker ol li a:hover, #albumpicker ol li a:focus {
+        background: #0082f0;
+        color: white;
+    }
+    #albumpicker ol li a strong {
+        display: block;
+    }
