--- a/spirit/views/photos.html
+++ b/spirit/views/photos.html
@@ -13,7 +13,7 @@
             {{/filterSearch}}
         </li>
         {{/hasFilters}}
-        <li class="filter"><a href="#">Album</a></li>
+        <li class="filter"><a href="{{baseUrl}}spirit/partial/albums" class="albumpicker">Album</a></li>
         <li class="filter"><a href="#">Month</a></li>
         <li class="upload"><a href="#">Upload</a></li>
         <li class="edit"><a href="#">Edit</a></li>
@@ -56,5 +56,7 @@
 {{/hasPagination}}
 
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/photos.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/dialog.js"></script>
+<script type="text/javascript" src="{{baseUrl}}spirit/views/js/albumpicker.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/loadmore.js"></script>
 <script type="text/javascript" src="{{baseUrl}}spirit/views/js/confirmdelete.js"></script>
