--- a/spirit/views/css/components.css
+++ b/spirit/views/css/components.css
@@ -100,8 +100,15 @@
         font-size: .8em;
         font-weight: normal; 
     }
-    .albumstream a { color: white; opacity: .7; }
-    .albumstream a:hover { opacity: 1; }
+    .albumstream a {
+        color: white;
+        opacity: .7;
+        text-decoration: none;
+    }
+    .albumstream a:hover {
+        opacity: 1;
+        text-decoration: underline;
+    }
     .albumstream img { display: none; }
     .albumstream ul {
         margin-top: -1.3em;
